[package]
name = "ph-image-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2.11", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
serde_yaml = "0.8"
futures = "0.3"
url = "2.2.2"
base64 = "0.13.0"
user-agent-parser = "0.3.3"
prometheus = "0.13"
lazy_static = "1.4.0"
actix-web = "4"
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = "0.11.11"